<resources>
    <string name="app_name">Voting App</string>
    <string name="line1">  Vote</string>
    <string name="line2">  It is a right of every person in democracy country.</string>
    <string name="line3">Choose your right voice.</string>
    <string name="Login">Login</string>
    <string name="voter">Voter Login</string>
    <string name="admin">Admin Login</string>
    <string name="Signup">Signup</string>
    <string name="Loginb">Login</string>
    <string name="id"> Voter Id</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="title_activity_adminlogin">Adminlogin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update_voter">Update voter</string>
    <string name="count">Count Vote</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_adminactivity">Adminactivity</string>
    <string name="title_activity_admin">Admin</string>
</resources>