<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="Home">

        <include
            android:id="@+id/adddetails_toolbar"
            layout="@layout/home_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="416dp"
            android:layout_height="677dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adddetails_toolbar">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="177dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="204dp"
                android:layout_marginRight="204dp"
                android:layout_marginBottom="594dp"
                android:fontFamily="sans-serif"
                android:text="@string/line1"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textColor="#FF7A49"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="72dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="367dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="525dp"
                android:fontFamily="sans-serif"
                android:text="@string/line2"
                android:textAllCaps="true"
                android:textColor="#FF7A49"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:layout_editor_absoluteX="22dp" />


            <TextView
                android:layout_width="367dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="142dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="459dp"
                android:fontFamily="sans-serif"
                android:text="@string/line3"
                android:textAllCaps="true"
                android:textColor="#FF7A49"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:layout_editor_absoluteX="22dp" />

            <ImageView
                android:layout_width="373dp"
                android:layout_height="235dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="217dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="225dp"
                app:srcCompat="@drawable/login_page" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/voter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="91dp"
                android:layout_marginLeft="91dp"
                android:layout_marginTop="480dp"
                android:layout_marginEnd="114dp"
                android:layout_marginRight="114dp"
                android:layout_marginBottom="142dp"
                android:backgroundTint="@color/orange"
                android:text="@string/voter"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="18sp"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconGravity="end"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/admin"
                android:layout_width="235dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="91dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="545dp"
                android:layout_marginEnd="114dp"
                android:layout_marginRight="114dp"
                android:layout_marginBottom="78dp"
                android:backgroundTint="@color/orange"
                android:text="@string/admin"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconGravity="end"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
